Extract env to .env

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -7,7 +7,8 @@
 </head>
 
 <body>
-    {{{ contents }}}
+    <h1> {{ title }}</h1>
+    <h2> {{ description }} </h2>
     <ul>
         {{#each posts}}
         <li>
