--- a/layouts/post.html
+++ b/layouts/post.html
@@ -4,6 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <title>{{ title }}</title>
+    <style>
+        body {
+            max-width: 40em;
+            margin: 0 auto;
+            padding: 0 2em;
+        }
+    </style>
 </head>
 
 <body>
